--- a/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/VacancySubmitted.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/VacancySubmitted.cshtml
@@ -6,20 +6,25 @@
 
 <div class="success-banner">
     <h1 class="heading-large no-btm-margin"><i class="fa fa-check"></i>Vacancy submitted for approval</h1>
+    <p>Reference number: @Model.VacancyReferenceNumber</p>
 </div>
-<section class="section-border">
-    <section class="text">
-        <p>
-            Once your vacancy has been approved it'll be published on the Find and apprenticeship service
-        </p>
-    </section>
+<section>
+    <hgroup class="hgroup-medium text">
+        <h2 class="heading-medium">Next steps</h2>
+    </hgroup>
+    <p>
+        Your vacancy advert will now be reviewed by a Skills Funding Agency adviser.
+        You’ll be notified via your recruitment home page if any changes are
+        necessary before the advert goes live.
+    </p>
 </section>
 <section class="section-border">
     <div class="hgroup-medium text">
         <h2 class="heading-medium">Create another vacancy</h2>
+        <span class="subtitle">Start with a fresh template or continue with a draft</span>
     </div>
     <div class="form-group">
-        <a href="@Url.RouteUrl(RecruitmentRouteNames.SelectExistingEmployer, new { providerSiteErn = Model.ProviderSiteErn })" class="button">Create vacancy</a>
+        <a href="@Url.RouteUrl(RecruitmentRouteNames.SelectExistingEmployer, new { providerSiteErn = Model.ProviderSiteErn })" class="button">Create new vacancy</a>
     </div>
     <p>
         <a href="@Url.RouteUrl(RecruitmentRouteNames.RecruitmentHome)">Return to recruitment home</a>
