Removed obsolete empty line when Addres Line 2 of employer is empty

--- a/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/SelectNewEmployer.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/SelectNewEmployer.cshtml
@@ -97,7 +97,9 @@
                             </th>
                             <td>
                                 @employerResultsViewModel.Address.AddressLine1
-                                <br/>@employerResultsViewModel.Address.AddressLine2
+                                @if (!string.IsNullOrWhiteSpace(@employerResultsViewModel.Address.AddressLine2))
+                                    <br/>@employerResultsViewModel.Address.AddressLine2
+                                }
                                 <br/>@employerResultsViewModel.Address.Postcode
                             </td>
                             <td>@employerResultsViewModel.Ern</td>
