--- a/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/SelectEmployer.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/SelectEmployer.cshtml
@@ -98,7 +98,10 @@
                             </th>
                             <td>
                                 @employerResultsViewModel.Address.AddressLine1
-                                <br/>@employerResultsViewModel.Address.AddressLine2
+                                @if (!string.IsNullOrWhiteSpace(@employerResultsViewModel.Address.AddressLine2) )
+                                {
+                                    <br />@employerResultsViewModel.Address.AddressLine2
+                                }
                                 <br/>@employerResultsViewModel.Address.Postcode
                             </td>
                             <td>@employerResultsViewModel.Ern</td>
