Added city to employer list view

--- a/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/SelectEmployer.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/SelectEmployer.cshtml
@@ -102,7 +102,7 @@
                                 {
                                     <br />@employerResultsViewModel.Address.AddressLine2
                                 }
-                                <br />@employerResultsViewModel.Address.Postcode
+                                <br />@employerResultsViewModel.Address.Postcode @employerResultsViewModel.Address.AddressLine4 
                             </td>
                             <td>@employerResultsViewModel.Ern</td>
                             <td>
