--- a/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/SelectNewEmployer.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/SelectNewEmployer.cshtml
@@ -99,7 +99,7 @@
                                 @employerResultsViewModel.Address.AddressLine1
                                 @if (!string.IsNullOrWhiteSpace(@employerResultsViewModel.Address.AddressLine2))
                                 {
-                                    <br/>@employerResultsViewModel.Address.AddressLine2
+                                    <br/>@employerResultsViewModel.Address.AddressLine2 @employerResultsViewModel.Address.AddressLine4
                                 }
                                 <br/>@employerResultsViewModel.Address.Postcode
                             </td>
