--- a/src/SFA.Apprenticeships.Web.Recruit/Views/ProviderUser/Home.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/ProviderUser/Home.cshtml
@@ -46,7 +46,7 @@
                 <section>
                     <h2 class="heading-medium">Your vacancies</h2>
                     <div class="grid-wrapper font-xsmall med-btm-margin">
-                        <div class="grid grid-2-3">
+                        @*<div class="grid grid-2-3">
                             <div class="inner-block-padr">
                                 <select name="" id="" class="form-label">
                                     <option value="" hidden>-- Filter vacancies --</option>
@@ -68,7 +68,7 @@
                                 <option value="">Drafts</option>
                                 <option value="">Closed</option>
                             </select>
-                        </div>
+                        </div>*@
                     </div>
                     <div class="tabbed-element tab1 active width-all-1-1">
                         <table class="no-btm-margin">
@@ -77,78 +77,24 @@
                                 <col class="t30">
                             </colgroup>
                             <tbody>
-                            <tr class="va-middle">
-                                <td>
-                                    <div class="vac-title">
-                                        <a href="live-apprenticeship-summary.html" class="disp-block link-unimp">Mechanical Engineer – Precision Toolmaker <span class="inl-block">(12 applications)</span></a>
-                                    </div>
-                                    <span>RG Engineering</span>
-                                </td>
-                                <td class="ta-center">
-                                    <span class="tag-live">Live</span>
-                                    Closing in 1 day
-                                </td>
-                            </tr>
-                            <tr class="va-middle">
-                                <td>
-                                    <div class="vac-title">
-                                        <a title="This vacancy is closing soon with no applications" href="live-apprenticeship.html"
-                                           class="disp-block link-unimp">Apprentice precision toolmaker<span class="inl-block">(0 applications) <i class="fa fa-exclamation-circle"></i></span></a>
-                                    </div>
-                                    <span>Regent Engineers Ltd </span>
-                                </td>
-                                <td class="ta-center">
-                                    <span class="tag-live">Live</span>
-                                    Closing in 3 days
-                                </td>
-                            </tr>
-                            <tr class="va-middle">
-                                <td>
-                                    <div class="vac-title">
-                                        <a href="review-apprenticeship.html" class="disp-block link-unimp">Electrical engineer apprentice</a>
-                                    </div>
-                                    <span>Express Circuits Ltd</span>
-                                </td>
-                                <td>
-                                    <span class="tag-pending">For review</span>
-                                </td>
-                            </tr>
-                            <tr class="va-middle">
-                                <td>
-                                    <div class="vac-title">
-                                        <a href="submitted-apprenticeship.html" class="disp-block link-unimp">Engineering technician apprentice</a>
-                                    </div>
-                                    <span>Stechford Moulding Ltd </span>
-                                </td>
-                                <td>
-                                    <span class="tag-submitted">Submitted</span>
-                                </td>
-                            </tr>
-                            <tr class="va-middle">
-                                <td>
-                                    <div class="vac-title">
-                                        <a href="draft-apprenticeship.html" class="disp-block link-unimp">Apprentice manufacturing/mechanical engineer</a>
-                                    </div>
-                                    <span>Aggregate Industries</span>
-                                </td>
-                                <td>
-                                    <span class="tag-draft">Draft</span>
-                                </td>
-                            </tr>
-                            <tr class="va-middle">
-                                <td>
-                                    <div class="vac-title">
-                                        <a href="draft-apprenticeship.html" class="disp-block link-unimp">Structural engineering apprentice</a>
-                                    </div>
-                                    <span>Telephone Europe</span>
-                                </td>
-                                <td>
-                                    <span class="tag-draft">Draft</span>
-                                </td>
-                            </tr>
+                            @foreach(var vacancy in Model.Vacancies)
+                            {
+                                <tr class="va-middle">
+                                    <td>
+                                        <div class="vac-title">
+                                            <a href="live-apprenticeship-summary.html" class="disp-block link-unimp">@vacancy.Title<span class="inl-block">(? applications)</span></a>
+                                        </div>
+                                        <span>@vacancy.ProviderSiteEmployerLink.Employer.Name</span>
+                                    </td>
+                                    <td class="ta-center">
+                                        <span class="tag-draft">Draft</span>
+                                        @*Closing in 1 day*@
+                                    </td>
+                                </tr>
+                            }
                             </tbody>
                         </table>
-                        <div class="page-navigation font-xsmall small-btm-margin">
+                        @*<div class="page-navigation font-xsmall small-btm-margin">
                             <a href="#" class="page-navigation__btn previous disabled">
                                 <i class="arrow-button fa fa-angle-left"></i>
                                 <span class="description">Previous</span>
@@ -159,7 +105,7 @@
                                 <span class="description">Next</span>
                                 <span class="counter">2 of 2</span>
                             </a>
-                        </div>
+                        </div>*@
                     </div>
                 </section>
             </div>
