Content changes following demo

--- a/src/SFA.Apprenticeships.Web.Recruit/Views/ProviderUser/Settings.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/ProviderUser/Settings.cshtml
@@ -58,7 +58,7 @@
             }
             else
             {
-                @Html.DropDownListFor(m => m.ProviderUserViewModel.DefaultProviderSiteErn, Model.ProviderSites, "", new { @class = "chosen-select", style="min-width: 50%;", data_placeholder="Please select site" })
+                @Html.DropDownListFor(m => m.ProviderUserViewModel.DefaultProviderSiteErn, Model.ProviderSites, "", new { @class = "chosen-select", style="min-width: 50%;", data_placeholder="Please select your default provider site" })
             }
         </div>
 
