US837 Added draft status

--- a/src/SFA.Apprenticeships.Web.Recruit/Views/ProviderUser/Home.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/ProviderUser/Home.cshtml
@@ -104,7 +104,7 @@
                                         <span>@vacancy.ProviderSiteEmployerLink.Employer.Name</span>
                                     </td>
                                     <td>
-                                        <span class="tag-draft">Draft</span>
+                                        <span class="tag-draft">@vacancy.Status</span>
                                         @*<p class="note-text">Closing in 1 day</p>*@
                                     </td>
                                 </tr>
