--- a/src/SFA.Apprenticeships.Web.Recruit/Views/ProviderUser/Home.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/ProviderUser/Home.cshtml
@@ -54,11 +54,7 @@
         <div class="grid grid-1-1">
             <div class="inner-block-padr">
                 <section>
-                    <h2 class="heading-medium">New vacancy</h2>
-                    <p class="font-xsmall">Create a new vacancy, clone or continue with a draft</p>
-                    <div class="font-xsmall">
-                        <button id="new-vacancy-button" type="submit" name="ProviderSiteAction" class="button" value="NewVacancy">New vacancy</button>
-                    </div>
+                   <button id="new-vacancy-button" type="submit" name="ProviderSiteAction" class="button" value="NewVacancy">Create new vacancy</button>
                 </section>
                 <section>
                     <h2 class="heading-medium">Your vacancies</h2>
