US837: added save and exit button to vacancy creation journey

--- a/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/PreviewVacancy.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/PreviewVacancy.cshtml
@@ -188,6 +188,7 @@
     <section>
         <div class="form-group">
             <button type="submit" class="button">Submit for approval</button>
+            <a id="dashboardLink" href="@Url.RouteUrl(RecruitmentRouteNames.RecruitmentHome)">Return to dashboard</a>
         </div>
     </section>
 }
