--- a/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/VacancyRequirementsProspects.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/VacancyRequirementsProspects.cshtml
@@ -25,6 +25,7 @@
         </div>
     </section>
     <div class="grid grid-1-2">
-        <button type="submit" class="button">Save and continue</button>
+        <button type="submit" class="button" name="VacancyRequirementsProspects" value="VacancyRequirementsProspects">Save and continue</button>
+        <button type="submit" class="button-link" name="VacancyRequirementsProspects" value="VacancyRequirementsProspectsAndExit">Save and exit</button>
     </div>
 }
