--- a/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/CreateVacancy.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/CreateVacancy.cshtml
@@ -66,6 +66,7 @@
     @Html.HiddenFor(model => model.ProviderSiteEmployerLink.Employer.Ern);
 
     <div class="form-group">
-        <button type="submit" class="button">Save and continue</button>
+        <button type="submit" class="button" name="CreateVacancy" value="CreateVacancy">Save and continue</button>
+        <button type="submit" class="button-link" name="CreateVacancy" value="CreateVacancyAndExit">Save and exit</button>
     </div>
 }
