--- a/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/VacancyQuestions.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/VacancyQuestions.cshtml
@@ -22,6 +22,7 @@
         </div>
     </section>
     <div class="grid grid-1-2">
-        <button type="submit" class="button">Save and continue</button>
+        <button type="submit" class="button" name="VacancyQuestions" value="VacancyQuestions">Save and continue</button>
+        <button type="submit" class="button-link" name="VacancyQuestions" value="VacancyQuestionsAndExit">Save and exit</button>
     </div>
 }
