--- a/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/VacancySummary.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/VacancySummary.cshtml
@@ -1,5 +1,7 @@
-﻿@model SFA.Apprenticeships.Web.Recruit.ViewModels.Vacancy.VacancySummaryViewModel
+﻿@model VacancySummaryViewModel
 @using SFA.Apprenticeships.Web.Recruit.Constants
+@using SFA.Apprenticeships.Web.Recruit.ViewModels.Vacancy
+@using SFA.Apprenticeships.Web.Common.Extensions
 @{
     ViewBag.Title = "Recruit an Apprentice - Enter vacancy summary";
 }
@@ -20,8 +22,14 @@
             @Html.FormTextAreaFor(m => m.WorkingWeek, controlHtmlAttributes: new { @class = "width-all-1-2", type = "text", size = 12, autofocus = "autofocus" })
             @Html.FormTextFor(m => m.WeeklyWage, controlHtmlAttributes: new { @class = "width-all-1-2", type = "text", size = 12 })
             @Html.FormTextFor(m => m.Duration, controlHtmlAttributes: new { @class = "width-all-1-2", type = "text", size = 12 })
-            @Html.FormTextFor(m => m.ClosingDate, controlHtmlAttributes: new { @class = "width-all-1-3", type = "date" })
-            @Html.FormTextFor(m => m.PossibleStartDate, controlHtmlAttributes: new { @class = "width-all-1-3", type = "date" })
+            <fieldset class="form-group inline-fixed date-input">
+                <legend class="form-label">@Model.GetMetadata(m => m.ClosingDate).DisplayName</legend>
+                @Html.EditorFor(r => r.ClosingDate)
+            </fieldset>
+            <fieldset class="form-group inline-fixed date-input">
+                <legend class="form-label">@Model.GetMetadata(m => m.PossibleStartDate).DisplayName</legend>
+                @Html.EditorFor(r => r.PossibleStartDate)
+            </fieldset>
             @Html.FormTextAreaFor(m => m.LongDescription, controlHtmlAttributes: new { @class = "width-all-1-1 form-textarea-large", type = "text", size = 12, rows = 22 })
         </div>
     </section>
