Added unit tests around visibility of "save and exit" button in vacancy creation journey

--- a/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/VacancyQuestions.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/VacancyQuestions.cshtml
@@ -23,6 +23,6 @@
     </section>
     <div class="grid grid-1-2">
         <button type="submit" class="button" name="VacancyQuestions" value="VacancyQuestions">Save and continue</button>
-        <button type="submit" class="button-link" name="VacancyQuestions" value="VacancyQuestionsAndExit">Save and exit</button>
+        <button id="VacancyQuestionsAndExit" type="submit" class="button-link" name="VacancyQuestions" value="VacancyQuestionsAndExit">Save and exit</button>
     </div>
 }
