--- a/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/CreateVacancy.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/CreateVacancy.cshtml
@@ -67,6 +67,6 @@
 
     <div class="form-group">
         <button type="submit" class="button" name="CreateVacancy" value="CreateVacancy">Save and continue</button>
-        <button type="submit" class="button-link" name="CreateVacancy" value="CreateVacancyAndExit">Save and exit</button>
+        <button id="createVacancyAndExit" type="submit" class="button-link" name="CreateVacancy" value="CreateVacancyAndExit">Save and exit</button>
     </div>
 }
