--- a/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/VacancySummary.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/VacancySummary.cshtml
@@ -35,6 +35,6 @@
     </section>
     <div class="grid grid-1-2">
         <button type="submit" class="button" name="VacancySummary" value="VacancySummary">Save and continue</button>
-        <button type="submit" class="button-link" name="VacancySummary" value="VacancySummaryAndExit">Save and exit</button>
+        <button id="vacancySummaryAndExit" type="submit" class="button-link" name="VacancySummary" value="VacancySummaryAndExit">Save and exit</button>
     </div>
 }
