--- a/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/CreateVacancy.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/CreateVacancy.cshtml
@@ -37,7 +37,7 @@
     </div>
 
     <div class="form-group">
-        <label class="form-label">Apprenticeship level</label>
+        <label class="form-label">Apprenticeship levels</label>
 
         <div class="form-group small-btm-margin clearfix">
             @* ReSharper disable once Html.IdNotResolved *@
@@ -56,8 +56,39 @@
         <div class="form-group small-btm-margin clearfix">
             @* ReSharper disable once Html.IdNotResolved *@
             <label for="apprenticeship-level-higher" class="block-label">
-                @Html.RadioButtonFor(model => model.ApprenticeshipLevel, ApprenticeshipLevel.Higher, new { id = "apprenticeship-level-higher", aria_labelledby = "apprenticeship-level-label" }) Higher
+                @Html.RadioButtonFor(model => model.ApprenticeshipLevel, ApprenticeshipLevel.Higher, new {id = "apprenticeship-level-higher", aria_labelledby = "apprenticeship-level-label"}) Higher
             </label>
+        </div>
+    </div>
+    <div class="form-group">
+        <div class="blocklabel-single-container">
+            <div class="form-group inline clearfix blocklabel-single hide-nojs">
+                <h3 class="heading-small">Manage application method</h3>
+                <p>
+                    Will this vacancy be managed through the recruit an apprentice
+                    site?
+                </p>
+                @* ReSharper disable once Html.IdNotResolved *@
+                <label for="apprenticeship-online-vacancy" class="block-label" data-target="online-panel">
+                    @Html.RadioButtonFor(model => model.OfflineVacancy, false, new {id = "apprenticeship-online-vacancy", aria_labelledby = "apprenticeship-vacancy-management-type-label"}) Yes
+                </label>
+
+                @* ReSharper disable once Html.IdNotResolved *@
+                <label for="apprenticeship-offline-vacancy" class="block-label" data-target="offline-panel">
+                    @Html.RadioButtonFor(model => model.OfflineVacancy, true, new {id = "apprenticeship-offline-vacancy", aria_labelledby = "apprenticeship-vacancy-management-type-label", aria_controls="offline-panel"}) No
+                </label>
+            </div>
+            <div id="offline-panel" class="toggle-content panel-indent blocklabel-content">
+                <div class="form-group">
+                    @* ReSharper disable once Html.IdNotResolved *@
+                    @Html.FormTextFor(m => m.OfflineApplicationUrl, controlHtmlAttributes: new {@class = "width-all-1-2", type = "text", size = 12, id = "apprenticeship-offline-application-url"})
+                </div>
+                <div class="form-group">
+                    @* ReSharper disable once Html.IdNotResolved *@
+                    @Html.FormTextAreaFor(m => m.OfflineApplicationInstructions, controlHtmlAttributes: new {type = "text", size = 12, @class = "width-all-1-1 form-textarea-medium", id = "apprenticheship-offline-application-instructions"})
+                    <br/>
+                </div>
+            </div>
         </div>
     </div>
 
