Bypass questions for candidates if the vacancy is offline

--- a/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/CreateVacancy.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/CreateVacancy.cshtml
@@ -37,7 +37,7 @@
     </div>
 
     <div class="form-group">
-        <label class="form-label">Apprenticeship levels</label>
+        <label class="form-label">Apprenticeship level</label>
 
         <div class="form-group small-btm-margin clearfix">
             @* ReSharper disable once Html.IdNotResolved *@
