--- a/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/PreviewVacancy.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/PreviewVacancy.cshtml
@@ -145,6 +145,24 @@
                 </div>
             </div>
         </section>
+
+        @if (Model.OfflineVacancy)
+        {
+            <section class="section-border" id="offline-vacancy" style="">
+                <h2 class="heading-large">Employer's application instructions</h2>
+                <div class="text">
+                    <p id="application-instructions">
+                        @Model.OfflineApplicationInstructions
+                    </p>
+                </div>
+                <div class="form-group">
+                    <p class="no-btm-margin">This apprenticeship requires you to apply through the employer's website.</p>
+                    <a id="external-employer-website" rel="external" href="@Model.OfflineApplicationUrl" target="_blank">@Model.OfflineApplicationUrl</a>
+                    <i class="fa fa-check the-icon" style="color: green;"></i>
+                </div>
+            </section>
+        }
+        
         <section class="section-border grid-wrapper" id="provider-info">
             <h2 class="heading-large">Training provider</h2>
             <div class="grid grid-2-3">
