Introduced Guid to track back navigation in browser during vacancy posting journey

--- a/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/ConfirmEmployer.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/ConfirmEmployer.cshtml
@@ -18,6 +18,7 @@
 
         @Html.HiddenFor(m => m.ProviderSiteErn)
         @Html.HiddenFor(m => m.Employer.Ern)
+        @Html.HiddenFor(m => m.VacancyGuid)
 
         <div class="grid grid-1-2">
             <div class="inner-block-padr">
