--- a/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/SelectEmployer.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/SelectEmployer.cshtml
@@ -6,7 +6,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 
     const string selected = "selected";
-
+    var vacancyGuidValue = Guid.NewGuid();
     var ernSearchSelected = Model.FilterType == EmployerFilterType.Ern ? selected : null;
     var nameAndLocationSearchSelected = Model.FilterType == EmployerFilterType.NameAndLocation ? selected : null;
 }
@@ -106,7 +106,7 @@
                             </td>
                             <td>@employerResultsViewModel.Ern</td>
                             <td>
-                                <a href="@Url.RouteUrl(RecruitmentRouteNames.ComfirmEmployer, new {providerSiteErn = Model.ProviderSiteErn, ern = employerResultsViewModel.Ern})">Select employer</a>
+                                <a href="@Url.RouteUrl(RecruitmentRouteNames.ComfirmEmployer, new {providerSiteErn = Model.ProviderSiteErn, ern = employerResultsViewModel.Ern, vacancyGuid = vacancyGuidValue })">Select employer</a>
                             </td>
                         </tr>
                     }
