--- a/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/PreviewVacancy.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/PreviewVacancy.cshtml
@@ -36,12 +36,12 @@
             <div class="grid grid-1-3">
                 <div class="inner-block-padr">
                     <h3 class="bold-small">Weekly wage</h3>
-                    <p id="vacancy-wage">@Model.WeeklyWage</p>
+                    <p id="vacancy-wage">@Model.Wage</p>
 
                     <h3 class="bold-small">Working week</h3>
                     <p id="vacancy-working-week" itemprop="workHours">@Model.WorkingWeek</p>
                     <h3 class="bold-small">Apprenticeship duration</h3>
-                    <p id="vacancy-expected-duration">@(string.IsNullOrWhiteSpace(@Model.Duration) ? "Not specified" : @Model.Duration)</p>
+                    <p id="vacancy-expected-duration">@Model.Duration</p>
                     <h3 class="bold-small">Possible start date</h3>
                     <p id="vacancy-start-date">@Html.DisplayFor(m => Model.PossibleStartDate)</p>
                     <h3 class="bold-small">Apprenticeship level</h3>
