--- a/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/VacancySummary.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/VacancySummary.cshtml
@@ -23,7 +23,7 @@
                 @Html.FormTextAreaFor(m => m.WorkingWeek, containerHtmlAttributes: new {@baseClassName = "working-week"}, controlHtmlAttributes: new {@class = "width-all-1-2", type = "text", size = 12, autofocus = "autofocus"})
                 @Html.FormTextFor(m => m.HoursPerWeek, containerHtmlAttributes: new {@baseClassName = "hours-per-week"}, controlHtmlAttributes: new {@class = "form-control-small", type = "tel", size = 12})
             </div>
-            @Html.FormTextFor(m => m.WeeklyWage, controlHtmlAttributes: new {@class = "width-all-1-2", type = "text", size = 12})
+            @Html.FormTextFor(m => m.Wage, controlHtmlAttributes: new {@class = "width-all-1-2", type = "text", size = 12})
             @Html.FormTextFor(m => m.Duration, controlHtmlAttributes: new {@class = "width-all-1-2", type = "text", size = 12})
             <fieldset class="form-group inline-fixed date-input">
                 <legend class="form-label">@Model.GetMetadata(m => m.ClosingDate).DisplayName</legend>
