--- a/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/VacancySummary.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/VacancySummary.cshtml
@@ -1,7 +1,9 @@
 ﻿@model VacancySummaryViewModel
+@using SFA.Apprenticeships.Domain.Entities.Vacancies.ProviderVacancies
 @using SFA.Apprenticeships.Web.Recruit.Constants
 @using SFA.Apprenticeships.Web.Recruit.ViewModels.Vacancy
 @using SFA.Apprenticeships.Web.Common.Extensions
+@using SFA.Apprenticeships.Web.Recruit.Constants.ViewModels
 @{
     ViewBag.Title = "Recruit an Apprentice - Enter vacancy summary";
 }
@@ -19,12 +21,52 @@
 
     <section>
         <div class="form-group">
-            <div class="form-group">
+            <fieldset class="form-group inline-fixed">
                 @Html.FormTextAreaFor(m => m.WorkingWeek, containerHtmlAttributes: new {@baseClassName = "working-week"}, controlHtmlAttributes: new {@class = "width-all-1-2", type = "text", size = 12, autofocus = "autofocus"})
-                @Html.FormTextFor(m => m.HoursPerWeek, containerHtmlAttributes: new {@baseClassName = "hours-per-week"}, controlHtmlAttributes: new {@class = "form-control-small", type = "tel", size = 12})
+                @Html.FormTextFor(m => m.HoursPerWeek, containerHtmlAttributes: new {@class = "form-group-compound"}, labelHtmlAttributes: new {style = "Display: none"}, controlHtmlAttributes: new {@class = "form-control-small", type = "tel", size = 12})@VacancyViewModelMessages.HoursPerWeek.LabelText
+            </fieldset>
+
+            <div class="blocklabel-single-container">
+                <label class="form-label" for="weekly-wage">Wage</label>
+                <div class="form-group" data-editable-x="">
+                    @* ReSharper disable once Html.IdNotResolved *@
+                    <label for="custom-wage" class="block-label" data-target="custom-wage-panel">
+                        @Html.RadioButtonFor(model => model.WageType, WageType.Weekly, new { id = "custom-wage", aria_controls = "wage-type-panel" })
+                        Custom wage
+                    </label>
+                    @* ReSharper disable once Html.IdNotResolved *@
+                    <label for="national-minimum-wage" class="block-label">
+                        @Html.RadioButtonFor(model => model.WageType, WageType.NationalMinimumWage, new { id = "national-minimum-wage", aria_controls = "wage-type-panel" })
+                        National minimum wage
+                    </label>
+                    @* ReSharper disable once Html.IdNotResolved *@
+                    <label for="apprenticeship-minimum-wage" class="block-label">
+                        @Html.RadioButtonFor(model => model.WageType, WageType.NationalMinimumWage, new { id = "apprenticeship-minimum-wage", aria_controls = "wage-type-panel" })
+                        Apprenticeship minimum wage
+                    </label>
+                </div>
+                <div id="custom-wage-panel" class="toggle-content blocklabel-content">
+                    <fieldset class="form-group inline-fixed">
+                        £
+                        @Html.FormTextFor(m => m.Wage, containerHtmlAttributes: new { @class = "form-group-compound" }, labelHtmlAttributes: new { style = "Display: none" }, controlHtmlAttributes: new { @class = "form-control-large", type = "tel", size = 12 })
+                        <select>
+                            <option selected="">per week</option>
+                            <option>per month</option>
+                            <option>annually</option>
+                        </select>
+                    </fieldset>
+                </div>
             </div>
-            @Html.FormTextFor(m => m.Wage, controlHtmlAttributes: new {@class = "width-all-1-2", type = "text", size = 12})
-            @Html.FormTextFor(m => m.Duration, controlHtmlAttributes: new {@class = "width-all-1-2", type = "text", size = 12})
+
+            <fieldset class="form-group inline-fixed">
+                @Html.FormTextFor(m => m.Duration, containerHtmlAttributes: new { @class = "form-group-compound" }, controlHtmlAttributes: new { @class = "form-control-large", type = "tel", size = 12 })
+                <select>
+                    <option selected="">weeks</option>
+                    <option>months</option>
+                    <option>years</option>
+                </select>
+            </fieldset>
+
             <fieldset class="form-group inline-fixed date-input">
                 <legend class="form-label">@Model.GetMetadata(m => m.ClosingDate).DisplayName</legend>
                 @Html.EditorFor(r => r.ClosingDate)
